--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -1,4 +1,4 @@
-<!-- Copyright (c) 2019-2020 十三 all rights reserved. -->
+<!-- header内容 包含商城nav、logo，商城搜索框 -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head-fragment(title,path)">
@@ -15,6 +15,7 @@
 </head>
 <nav id="nav" th:fragment="nav-fragment">
     <div class="banner_x center">
+        <!--商城logo-->
         <a th:href="@{/index}" class="logo"><h1>新蜂商城</h1></a>
         <div class="fr">
             <div class="search">
@@ -31,12 +32,12 @@
         <ul class="fl">
             <li><a th:href="@{/index}">新蜂商城</a></li>
             <li><a th:href="@{/admin}">后台管理系统</a></li>
-            <li><a href="https://edu.csdn.net/course/detail/26258">课程视频</a></li>
-            <li><a href="https://juejin.im/book/5da2f9d4f265da5b81794d48?referrer=59199e22a22b9d0058279886">课程文档</a></li>
-            <li><a href="https://gitee.com/newbee-ltd/newbee-donate">捐赠</a></li>
-            <li><a href="https://github.com/newbee-ltd/newbee-mall/issues">问题反馈</a></li>
-            <li><a href="https://github.com/newbee-ltd/newbee-mall">GitHub 地址</a></li>
-            <li><a href="https://gitee.com/newbee-ltd/newbee-mall">码云Gitee 地址</a></li>
+            <!--<li><a href="https://edu.csdn.net/course/detail/26258">课程视频</a></li>-->
+            <!--<li><a href="https://juejin.im/book/5da2f9d4f265da5b81794d48?referrer=59199e22a22b9d0058279886">课程文档</a></li>-->
+            <!--<li><a href="https://gitee.com/newbee-ltd/newbee-donate">捐赠</a></li>-->
+            <!--<li><a href="https://github.com/newbee-ltd/newbee-mall/issues">问题反馈</a></li>-->
+            <!--<li><a href="https://github.com/newbee-ltd/newbee-mall">GitHub 地址</a></li>-->
+            <!--<li><a href="https://gitee.com/newbee-ltd/newbee-mall">码云Gitee 地址</a></li>-->
         </ul>
         <div class="fr">
             <th:block th:unless="${session.newBeeMallUser==null}">
