--- a/src/main/resources/templates/mall/index.html
+++ b/src/main/resources/templates/mall/index.html
@@ -1,4 +1,3 @@
-<!-- Copyright (c) 2019-2020 十三 all rights reserved. -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="mall/header::head-fragment('NewBee商城-首页','index')">
@@ -68,7 +67,7 @@
             <th:block th:each="hotGoodse : ${hotGoodses}">
                 <div class="hot-image">
                     <a th:href="@{'/goods/detail/'+${hotGoodse.goodsId}}">
-                        <img th:src="@{${hotGoodse.goodsCoverImg}}" th:alt="${hotGoodse.goodsName}">
+                        <img th:src="@{'/'+${hotGoodse.goodsCoverImg}}" th:alt="${hotGoodse.goodsName}">
                     </a>
                 </div>
             </th:block>
@@ -172,7 +171,7 @@
                             <div class="info discount" th:text="${recommendGoods.tag}">
                                 新品
                             </div>
-                            <img th:src="@{${recommendGoods.goodsCoverImg}}" th:alt="${recommendGoods.goodsName}">
+                            <img th:src="@{'/'+${recommendGoods.goodsCoverImg}}" th:alt="${recommendGoods.goodsName}">
                             <p class="name" th:text="${recommendGoods.goodsName}">NewBeeMall</p>
                             <p class="item_price" th:text="${recommendGoods.sellingPrice}">NewBeeMall</p>
                             <p class="counter">猜你喜欢</p>
