--- a/src/main/resources/templates/mall/footer.html
+++ b/src/main/resources/templates/mall/footer.html
@@ -1,4 +1,4 @@
-<!-- Copyright (c) 2019-2020 十三 all rights reserved. -->
+<!-- footer内容. -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="site-footer" th:fragment="footer-fragment">
@@ -16,30 +16,30 @@
             </dl>
             <dl class="col-article">
                 <dt>帮助中心</dt>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">账户管理</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">购物指南</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">订单操作</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">账户管理</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">购物指南</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">订单操作</a></dd>
             </dl>
             <dl class="col-article">
                 <dt>关注我们</dt>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">新浪微博</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">官方微信</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">联系我们</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">新浪微博</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">官方微信</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">联系我们</a></dd>
             </dl>
             <dl class="col-article">
                 <dt>线下门店</dt>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">NEWBEE TOWN</a>
+                <dd><a rel="nofollow" href="##" target="_blank">NEWBEE TOWN</a>
                 </dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">服务网点</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">授权体验店</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">服务网点</a></dd>
+                <dd><a rel="nofollow" href="##" target="_blank">授权体验店</a></dd>
             </dl>
             <dl class="col-article">
-                <dt>关于新蜂</dt>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">了解新蜂</a>
+                <dt>关于商城</dt>
+                <dd><a rel="nofollow" href="##" target="_blank">了解商城</a>
                 </dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">加入新蜂</a>
+                <dd><a rel="nofollow" href="##" target="_blank">加入商城</a>
                 </dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">捐赠维护</a>
+                <dd><a rel="nofollow" href="##" target="_blank">捐赠维护</a>
                 </dd>
             </dl>
             <dl class="wx">
@@ -62,24 +62,23 @@
             <div class="clearfix">
                 <a th:href="@{/index}">新蜂商城</a>
                 <a th:href="@{/admin}">后台管理系统</a>
-                <a href="https://edu.csdn.net/course/detail/26258">课程视频</a>
-                <a href="https://juejin.im/book/5da2f9d4f265da5b81794d48?referrer=59199e22a22b9d0058279886">课程文档</a>
-                <a href="https://gitee.com/newbee-ltd/newbee-donate">捐赠</a>
-                <a href="https://github.com/newbee-ltd/newbee-mall/issues">问题反馈</a>
-                <a href="https://github.com/newbee-ltd/newbee-mall">GitHub 地址</a>
-                <a href="https://gitee.com/newbee-ltd/newbee-mall">码云Gitee 地址</a>
+                <!--<a href="https://edu.csdn.net/course/detail/26258">课程视频</a>-->
+                <!--<a href="https://juejin.im/book/5da2f9d4f265da5b81794d48?referrer=59199e22a22b9d0058279886">课程文档</a>-->
+                <!--<a href="https://gitee.com/newbee-ltd/newbee-donate">捐赠</a>-->
+                <!--<a href="https://github.com/newbee-ltd/newbee-mall/issues">问题反馈</a>-->
+                <!--<a href="https://github.com/newbee-ltd/newbee-mall">GitHub 地址</a>-->
+                <!--<a href="https://gitee.com/newbee-ltd/newbee-mall">码云Gitee 地址</a>-->
             </div>
         </div>
         <div class="footer-info w1100">
             <div class="info-text w1100">
                 <p><a href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">新蜂商城 &nbsp; | &nbsp;
-                    Powered by 十三&nbsp;
-                    | &nbsp;</a>
-                    &nbsp;QQ交流群：796794009
+                    Powered by MrLQQ&nbsp;
+                    </a>
                 </p>
-                <p><a href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">Copyright © 2019-2020 十三  All
+                <p><a href="##" target="_blank">Copyright © 2019-2020 MrLQQ  All
                     Rights
-                    Reserved.&nbsp; | &nbsp; 浙ICP备17008806号-5 </a></p>
+                    Reserved.&nbsp; | &nbsp; 辽ICP备XXXXXXX号XX </a></p>
             </div>
         </div>
 
