--- a/src/main/resources/templates/mall/order-settle.html
+++ b/src/main/resources/templates/mall/order-settle.html
@@ -65,7 +65,7 @@
                                             <td class="col col-thumb">
                                                 <div class="figure figure-thumb">
                                                     <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}">
-                                                        <img th:src="@{${item.goodsCoverImg}}"
+                                                        <img th:src="@{'/'+${item.goodsCoverImg}}"
                                                              width="80" height="80" alt="">
                                                     </a>
                                                 </div>
