添加了部分注释

--- a/src/main/resources/templates/mall/order-settle.html
+++ b/src/main/resources/templates/mall/order-settle.html
@@ -31,6 +31,7 @@
                         <div class="uc-order-item uc-order-item-pay">
                             <div class="order-detail">
 
+                                <!--步骤条-->
                                 <div class="order-summary">
                                     <div class="order-progress">
                                         <ol class="progress-list clearfix progress-list-5">
