--- a/src/main/resources/templates/mall/index.html
+++ b/src/main/resources/templates/mall/index.html
@@ -7,6 +7,7 @@
 <content id="content">
     <nav th:replace="mall/header::nav-fragment"></nav>
     <div id="banner">
+        <!--商品分类列表-->
         <div class="all-sort-list">
             <th:block th:each="category : ${categories}">
             <div class="item">
@@ -30,6 +31,7 @@
             </div>
             </th:block>
         </div>
+        <!--上面首页轮播图-->
         <div class="swiper-container fl">
             <div class="swiper-wrapper">
                 <!-- 配置了轮播图则显示后台配置的轮播图 -->
