注释掉了font-awesome的CDN，改用本地样式

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" th:href="@{/admin/plugins/bootstrap/css/bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugins/jqgrid-5.5.2/ui.jqgrid-bootstrap4.css}"/>
+
+    <!--<link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">-->
+
     <!-- Theme style -->
     <link rel="stylesheet" th:href="@{/admin/dist/css/adminlte.min.css}">
 </head>
@@ -41,7 +44,7 @@
             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
-                    <i class="fa fa-user-o mr-2"></i> 姓名
+                    <i class="fa fa-user mr-2"></i> 姓名
                     <span class="float-right text-muted text-sm">MrLQQ</span>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -51,7 +54,7 @@
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
-                    <i class="fa fa-address-card mr-2"></i> 邮箱
+                    <i class="fa fa-newspaper-o mr-2"></i> 邮箱
                     <span class="float-right text-muted text-sm">2802351094@qq.com</span>
                 </a>
             </div>
