需改了样式名称

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -89,11 +89,11 @@
 
                                 <div class="d-flex flex-row justify-content-end">
                                     <span class="mr-2">
-                                        <i class="fas fa-square text-primary"></i> This Week
+                                        <i class="fa-solid fa-square text-primary"></i> This Week
                                     </span>
 
                                     <span>
-                                        <i class="fas fa-square text-gray"></i> Last Week
+                                        <i class="fa-solid fa-square text-gray"></i> Last Week
                                     </span>
                                 </div>
                             </div>
@@ -130,11 +130,11 @@
 
                                 <div class="d-flex flex-row justify-content-end">
                   <span class="mr-2">
-                    <i class="fas fa-square text-primary"></i> This year
+                    <i class="fa fa-square-o text-primary"></i> This year
                   </span>
 
                                     <span>
-                    <i class="fas fa-square text-gray"></i> Last year
+                    <i class="fa fa-square-o text-gray"></i> Last year
                   </span>
                                 </div>
                             </div>
