修改了前台显示图片的路径

--- a/src/main/resources/templates/mall/detail.html
+++ b/src/main/resources/templates/mall/detail.html
@@ -20,7 +20,7 @@
     <div class="intro mt20 w clearfix">
         <div class="left fl" style="position: relative;">
             <div class="swiper-container fl">
-                <img th:src="@{'/'+${goodsDetail.goodsCoverImg}}">
+                <img th:src="@{${goodsDetail.goodsCoverImg}}">
             </div>
         </div>
         <div class="right fr">
