--- a/src/main/resources/templates/mall/cart.html
+++ b/src/main/resources/templates/mall/cart.html
@@ -47,7 +47,7 @@
                     <div class="content2 center">
                         <div class="sub_content fl ">
                         </div>
-                        <div class="sub_content cover fl"><img th:src="@{'/'+${item.goodsCoverImg}}"></div>
+                        <div class="sub_content cover fl"><img th:src="@{${item.goodsCoverImg}}"></div>
                         <div class="sub_content fl ft20" th:text="${item.goodsName}">商品名称</div>
                         <div class="sub_content fl" th:text="${item.sellingPrice+'元'}">1299元</div>
                         <div class="sub_content fl">
