--- a/src/main/resources/templates/mall/order-detail.html
+++ b/src/main/resources/templates/mall/order-detail.html
@@ -139,7 +139,7 @@
                                                 <div class="figure figure-thumb">
                                                     <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}">
                                                         <!--商品图片-->
-                                                        <img th:src="@{'/'+${item.goodsCoverImg}}"
+                                                        <img th:src="@{${item.goodsCoverImg}}"
                                                              width="80" height="80" alt="">
                                                     </a>
                                                 </div>
